增加了SDK的下载

--- a/src/main/resources/FrontEnd/src/html/developerGame.html
+++ b/src/main/resources/FrontEnd/src/html/developerGame.html
@@ -43,9 +43,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="Community.html">
+                    <a href="http://36058s3d36.zicp.vip/SDK/SUSTechGamerSDK_JavaVersion.zip">
                         <span class="icon"><i class="fa fa-cloud" aria-hidden="true"></i></span>
-                        <span class="title">Community</span>
+                        <span class="title">SDK</span>
                     </a>
                 </li>
             </ul>
