--- a/src/main/resources/FrontEnd/src/html/gamePage.html
+++ b/src/main/resources/FrontEnd/src/html/gamePage.html
@@ -179,9 +179,7 @@
             gameVideoUrl: "",
             price: "520",
             gameDescription: "this is the best game in SUSTech\nLOL!!!!!",
-            screenshotsUrl: [{
-                url: "../../figures/temporary/gamePageImg/star.png"
-            }],
+            screenshotsUrl: [],
             branches: [],
             DLCs: [],
             branchIndex: 0,
